# STOAT

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  TODO  filter_snarl.bash  formatted_gwas.tsv  modify_plink.bash  output.bed  output.bim  output.fam  plink_binary.assoc  quantitative_plink_formatted.tsv  report.md  setup.py  slink_plink.bash  test  test.cpp  threads  threads.cpp  verify_truth.py
.github/workflows/: ci.yml  python-tests.yml
data/binary/: binary.plink.phenotype.tsv  filtered_snarl_paths.txt  genotype.bed  genotype.bim  genotype.nosex  phenotype.tsv
data/new/: paths_snarl.tsv  variants.vcf
data/simu/: covar.tsv  genotype.bed  genotype.bim  genotype.nosex  output_gwas.tsv.assoc  paths_snarl.tsv  phenotypes.txt  variants.vcf
examples/: group.txt
plot_script/: make_plots.py
src/: CMakeLists.txt  Makefile  adjusted_pvalue.cpp  adjusted_pvalue.hpp  adjusted_pvalue.py  arg_parser.cpp  arg_parser.hpp  binary_analysis.cpp  binary_analysis.hpp  gaf_creator.cpp  gaf_creator.hpp  list_snarl_paths.cpp  list_snarl_paths.hpp  lmm.cpp  lmm.hpp  main.cpp  matrix.cpp  matrix.hpp  p_value_analysing.cpp  p_value_analysing.hpp  p_value_analysis.py  post_processing.cpp  post_processing.hpp  quantitative_analysis.cpp  quantitative_analysis.hpp  snarl_parser.cpp  snarl_parser.hpp  stoat_cxx  utils.cpp  utils.hpp
stoat/: __main__.py  gaf_creator.py  list_snarl_paths (copie).py  list_snarl_paths.py  p_value_analysis.py  snarl_analyser.py  test.py  utils.py  vcf_maker.py  write_position.py  write_ref_alt.py
stoat_node/: __main__.py  p_value_analysis.py  snarl_analyser.py
tests/: CMakeLists.txt  add_allele_num_gfa.py  add_freq.py  add_info_plink.py  add_p_value.py  add_vcf_freq.py  binary_gwas.tsv  compare_truth_vcf.py  create_dataset.py  data.txt  decronstruct.bash  formatted_gwas.tsv  genotype.bed  genotype.bim  genotype.fam  make_verity_vcf.py  match_position.py  match_snarl.py  merging.bash  modify_plink.bash  ols_cxx  ols_cxx.cpp  ols_python.py  only_snp_vcf.bash  pg.cover.gbwt  plink.assoc  plink.assoc.linear  plink.assoc.tsv  plink.bash  plink.binary.assoc  plink.nosex  plink.qassoc  plink_make_vcf.py  plink_position.tsv  plink_sortered.assoc  plink_to_vcf.bash  plink_vcf.snp.vcf  plink_vcf.vcf  plink_vcf.vcf.norm.vcf  quantitative.plink_vcf.snp.vcf  (+15 more)
tests/binary_test/: list_snarl_paths.tsv  out_snarl.tsv  snarl_analyse.tsv
tests/binary_tests_output/: binary_analysis.tsv  binary_test.assoc.tsv  group_paths_0.gaf  group_paths_1.gaf  plink.assoc  plink.assoc.logistic  plink.assoc.tsv  snarl_paths.tsv  top_variant_binary.tsv
tests/binary_tests_output/binary_output/: stoat.assoc.tsv
tests/fonctionnal/: CMakeLists.txt
tests/output/: binary_analysis.tsv  top_variant_binary.tsv
tests/plink_tests_output/: combined.tsv  modify_binary_gwas.assoc  modify_quantitative_gwas.assoc.linear  plink.assoc.linear  plink.assoc.logistic  plink_binary.tsv  plink_quantitative.tsv  stoat.assoc.tsv  test.vcf  test_vcf_binary.vcf
tests/quantitative_tests_output/: plink.assoc.linear  quantitative_test.assoc.tsv  stoat.assoc.tsv  top_variant_quantitative.tsv
tests/simu/: callgrind.out.2722997  paths_snarl.tsv  phenotypes.txt  variants.vcf
tests/simulation/binary/: binary.plink.phenotype.tsv  pg.dist  pg.pg
tests/simulation/binary_data/: binary_analysis.tsv  pg.dist  pg.gfa  snarl_paths.tsv
tests/simulation/quantitative/: pg.pg  quantitative.decomposed.normalized.svs.vcf  quantitative.plink.phenotype.tsv
tests/simulation/quantitative_data/: list_snarl_paths.tsv  pg.dist  pheno.tsv  quantitative_test.assoc.tsv  snarl_paths.tsv
tests/src/: CMakeCache.txt  Makefile  cmake_install.cmake  list_snarl_paths  list_snarl_paths.cpp  list_snarl_paths.hpp  list_snarl_paths.pos.py  main.cpp
tests/unittest/: CMakeLists.txt  binary_analysis_unit.cpp  binary_analysis_unit.cpp.cpp  binary_unit.cpp  gaf_creator_unit.cpp  list_snarl_paths_unit.cpp  matrix_unit.cpp  quantitative_analysis_unit.cpp  quantitative_unit.cpp
